test/files/pos/macro-annot-unused-param-b/Test_2.scala
//> using options -Ymacro-annotations -Werror -Wmacros:before -Wunused:params
@mymacro
class X

object Test {
  println(X.f(123))
}
